Fixes spacing a little

--- a/styles/now_theme_chill.css
+++ b/styles/now_theme_chill.css
@@ -67,3 +67,7 @@ header > nav,
 #meta {
   padding: 0.5rem;
 }
+
+section > article {
+  flex: 2 2 33%;
+}
